tablet set up with events/subscrptions

--- a/Socket Server/ServTest/ServTest/html/authorize.html
+++ b/Socket Server/ServTest/ServTest/html/authorize.html
@@ -124,7 +124,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Authorization Requests</h3>
-  <table>
+  <table id="authTable" onload = "myTable()">
     <tr>
       <th>      Username</th>
       <th>      Email</th>
@@ -151,18 +151,6 @@
     </tr>
     <tr>
       <td>Island Trading</td>
-      <td>Alfreds Futterkiste@gmail.com</td>
-      <td><a href="#" class="button">Accept</a></td>
-      <td><a href="#" class="button2">Deny</a></td>
-    </tr>
-    <tr>
-      <td>Laughing Bacchus Winecellars</td>
-      <td>Alfreds Futterkiste@gmail.com</td>
-      <td><a href="#" class="button">Accept</a></td>
-      <td><a href="#" class="button2">Deny</a></td>
-    </tr>
-    <tr>
-      <td>Magazzini Alimentari Riuniti</td>
       <td>Alfreds Futterkiste@gmail.com</td>
       <td><a href="#" class="button">Accept</a></td>
       <td><a href="#" class="button2">Deny</a></td>
