--- a/Socket Server/ServTest/html/currently_authorized.html
+++ b/Socket Server/ServTest/html/currently_authorized.html
@@ -3,7 +3,7 @@
 <head>
 
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Simply Me</title>
+  <title>Telepresence</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -149,16 +149,6 @@
     </tr>
     <tr>
       <td>Island Trading</td>
-      <td>Alfreds Futterkiste@gmail.com</td>
-      <td><a href="#" class="button2">Unfriend</a></td>
-    </tr>
-    <tr>
-      <td>Laughing Bacchus Winecellars</td>
-      <td>Alfreds Futterkiste@gmail.com</td>
-      <td><a href="#" class="button2">Unfriend</a></td>
-    </tr>
-    <tr>
-      <td>Magazzini Alimentari Riuniti</td>
       <td>Alfreds Futterkiste@gmail.com</td>
       <td><a href="#" class="button2">Unfriend</a></td>
     </tr>
