--- a/Socket Server/ServTest/html/home.html
+++ b/Socket Server/ServTest/html/home.html
@@ -3,7 +3,7 @@
 <head>
 
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Simply Me</title>
+  <title>Telepresence</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <!----
@@ -19,7 +19,7 @@
 <script src="js/jquery.min.js"></script>
 <!---<script src="/libs/qimessaging/2/qimessaging.js"></script>-->
 <script src="js/robotutils.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/home.js"></script>
     
 
 
@@ -72,7 +72,7 @@
   }
   </style>
 </head>
-<body>
+<body onload="setPep()">
 
 <!-- Navbar -->
 <nav class="navbar navbar-default">
@@ -98,7 +98,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">PepperID: XXXXXXXXXXXXXXXXXXXX</h3>
+  <h3 class="margin" id="header"></h3>
   <img src="images/pepperbotphoto1.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Robot" width="500" height="500">  <h3>I'm ready to be your best friend!</h3>
 </div>
 
