--- a/Socket Server/ServTest/html/index.html
+++ b/Socket Server/ServTest/html/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Simply Me</title>
+  <title>Telepresence</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <!-- Latest compiled and minified CSS -->
@@ -90,7 +90,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">PepperID: XXXXXXXXXXXXXXXXXXXX</h3>
+  <h3 class="margin">Have you been introduced to Pepper?</h3>
   <img src="images/pepperbotphoto1.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Robot" width="500" height="500">  <h3>I'm ready to be your best friend!</h3>
 </div>
 
