--- a/Socket Server/ServTest/html/login.html
+++ b/Socket Server/ServTest/html/login.html
@@ -3,7 +3,7 @@
 <head>
 
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Simply Me</title>
+  <title>Telepresence</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
