Made tables generated dyanmic

--- a/Socket Server/ServTest/html/home.html
+++ b/Socket Server/ServTest/html/home.html
@@ -89,7 +89,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="authorize.html">Auth</a></li>
         <li><a href="de-authorize.html">De-Auth</a></li>
-        <li><a href="authorize.html">Register</a></li>
+        <li><a href="register.html">Register</a></li>
         <li><a href="index.html">Log-Out</a></li>
       </ul>
     </div>
