--- a/Socket Server/ServTest/html/register.html
+++ b/Socket Server/ServTest/html/register.html
@@ -97,11 +97,11 @@
   <!-----Replace this code with Login Form -->
   <form id="form">
       PepperID:<br>
-      <input type="text" name="username"><br><br>
+      <input type="text" name="username" id= "pepperid"><br><br>
     </form>
     
     
-  <a href="#" id="img-click" onclick= "" class="btn btn-default btn-lg">
+  <a href="#" id="img-click" onclick= "register()" class="btn btn-default btn-lg">
     <span class="" onclick="" ></span> Register
   </a>
   
