--- a/Socket Server/ServTest/html/login.html
+++ b/Socket Server/ServTest/html/login.html
@@ -81,6 +81,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="login.html">Login</a></li>
         <li><a href="signup.html">Sign-up</a></li>
+        <li><a href="register.html">Register</a></li>
       </ul>
     </div>
   </div>
@@ -91,7 +92,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Please Log in </h3>
-  <p id="demo">Designed to be your friendly everyday problem solver. My name is Pepper and I am your new best friend.  </p>
+  <p id="demo">Designed to be your friendly everyday problem solver. Please remember that you have to be registered to your Pepper before log in.   </p>
   <!-----Replace this code with Login Form -->
   <form id="form">
       Username:<br>
