--- a/Socket Server/ServTest/html/signup.html
+++ b/Socket Server/ServTest/html/signup.html
@@ -84,6 +84,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="login.html">Login</a></li>
         <li><a href="signup.html">Sign-up</a></li>
+        <li><a href="register.html">Register</a></li>
     </ul>
     </div>
   </div>
