--- a/Socket Server/ServTest/html/android.html
+++ b/Socket Server/ServTest/html/android.html
@@ -27,7 +27,7 @@ input, textarea{
         <input type="text" name="hint"><br>
     </form>
     <br>
-    <a href="game.html" class="btn btn-default btn-lg" onclick="submit()">
+    <a href="#" class="btn btn-default btn-lg" onclick="submit()">
         <span class=""></span> Submit
     </a>
 </div>
