added field checking

--- a/Socket Server/ServTest/html/android.html
+++ b/Socket Server/ServTest/html/android.html
@@ -22,9 +22,9 @@ input, textarea{
 <div class="wrapper">
     <form id="form">
         Word/Phrase:<br>
-        <input type="text" name="word"><br>
+        <input type="text" name="word" required><br>
         Hint:<br>
-        <input type="text" name="hint"><br>
+        <input type="text" name="hint" required><br>
     </form>
     <br>
     <a href="#" class="btn btn-default btn-lg" onclick="submit()">
