--- a/Socket Server/ServTest/html/login.html
+++ b/Socket Server/ServTest/html/login.html
@@ -96,9 +96,9 @@
   <!-----Replace this code with Login Form -->
   <form id="form">
       Username:<br>
-      <input type="text" name="username"><br>
+      <input type="text" name="username" required><br>
       Password:<br>
-      <input type="password" name="password"><br><br>
+      <input type="password" name="password" required><br><br>
     </form>
     
     
