--- a/Socket Server/ServTest/html/register.html
+++ b/Socket Server/ServTest/html/register.html
@@ -97,7 +97,11 @@
   <!-----Replace this code with Login Form -->
   <form id="form">
       PepperID:<br>
-      <input type="text" name="username" id= "pepperid"><br><br>
+      <input type="text" name="peppername" id= "pepperid"><br><br>
+      Associated LoginID:<br>
+      <input type="text" name="username" id= "username"><br><br>
+
+
     </form>
     
     
