--- a/Socket Server/ServTest/html/currently_authorized.html
+++ b/Socket Server/ServTest/html/currently_authorized.html
@@ -12,7 +12,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="/libs/qimessaging/2/qimessaging.js"></script>
 <script src="js/robotutils.js"></script>
-<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/currently_authorized.js"></script>
 
 
 
