--- a/Socket Server/ServTest/html/request.html
+++ b/Socket Server/ServTest/html/request.html
@@ -48,7 +48,7 @@
             <a href="android.html" id="img-click" onclick= "accept()" class="btn btn-default btn-lg button">
                 <span class="" onclick="accept()" ></span> ACCEPT
             </a>
-            <a href="index.html" id="img-click" onclick= "deny()" class="btn btn-default btn-lg button2">
+            <a href="#" id="img-click" onclick= "deny()" class="btn btn-default btn-lg button2">
                 <span class="" onclick="deny()" ></span> DENY
             </a>
         
