--- a/Socket Server/ServTest/html/authorize.html
+++ b/Socket Server/ServTest/html/authorize.html
@@ -122,7 +122,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin" id="header">PepperID: XXXXXXXXXXXXXXXXXXXX</h3>
+  <h3 class="margin" id="header">PepperID: Salt</h3>
   <img src="images/pepper_hi_five.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="500" height="500">
   <h3>I'm ready to be your best friend!</h3>
 </div>
