--- a/Socket Server/ServTest/html/game.html
+++ b/Socket Server/ServTest/html/game.html
@@ -19,17 +19,15 @@
     <p id= "timer"></p>
  </div>
 
- <div class="container-fluid bg-1">
+ <div id='buttonDiv'class="container-fluid bg-1">
     <button id="c" class="btn btn-default btn-lg top-left" onclick="eventMusic()"><img src="images/android_guitar.png" width="30%" height="30%" />
     </button>
     <button id="d" class="btn btn-default btn-lg top-right" onclick="eventDance()"><img src="images/android-breakdancing1.jpg" width="30%" height="30%" /></button>
-    <button id="a" class="btn btn-default btn-lg bot-left" onclick="eventTool()"><img src="images/android_tool.png" width="30%" height="30%" /></button>
-    <button id="b" class="btn btn-default btn-lg bot-right" onclick="eventCheer()"><img src="images/android_cheer.png" width="30%" height="30%" /></button>
      <p id="mylives"></p>
      <p id="clue"></p>
      <p id="waiting"></p>
      <div class="hangman">
-        <img id="stickguy" src="images/hang1.png">
+        <img id="stickguy" src="images/hang1.png" height="100" width="100">
      </div>
      <div class="container">
          <div id="hold"></div>
@@ -40,7 +38,7 @@
        
      </div>
      <div class="container">
-            <button id="reset" class="btn btn-default btn-lg play_again">Play again</button>
+            <button id="home" class="btn btn-default btn-lg play_again hidden" >Home</button>
      </div>
  </div>
  
